Finished the assignment

--- a/Mission06_Tew/Views/Home/GettoKnow.cshtml
+++ b/Mission06_Tew/Views/Home/GettoKnow.cshtml
@@ -7,7 +7,7 @@
 <h1>Get to Know Joel</h1>
 <br />
 
-<a href="https://www.qwcomedy.com/">
+<a href="https://baconsale.com/">
     <img src="~/img/BaconsaleKate.jpg" alt="Baconsale" width="200">
 </a>
 
