--- a/Mission06_Tew/Views/Home/Index.cshtml
+++ b/Mission06_Tew/Views/Home/Index.cshtml
@@ -2,6 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
+<!--Main page-->
 <div class="text-center">
     <h1 class="display-4">The Joel Hilton Film Collection</h1>
     <img src="img/JoelHiltonHeadshot.jpg" alt="Joel Hilton"
